Wed Mar 25 16:09:01 1998  Michael Meissner  <meissner@cygnus.com>

	* rs6000.h (FUNCTION_ARG_PADDING): Cast result to be enum
	direction.
	(function_arg_padding): Declare.

	* rs6000.c: Include stdlib.h if we have it.
	(function_arg_padding): Change return type to int, cast enum's to
	int.

	(From Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>)
	* rs6000.c (rs6000_override_options): Change type of `i', `j' and
	`ptt_size' from int to size_t.
	(rs6000_file_start): Likewise for `i'.
	(rs6000_replace_regno): Add default case in enumeration switch.
	(output_epilog): Remove unused variable `i'.
	(rs6000_longcall_ref): Remove unused variables `len', `p', `reg1'
	and `reg2'.
 
	* rs6000.h (ADDITIONAL_REGISTER_NAMES): Add missing braces around
	initializer.
	(get_issue_rate, non_logical_cint_operand): Add prototype.
	(rs6000_output_load_toc_table): Ditto.
 
	* rs6000.md (udivmodsi4): Add explicit braces to avoid ambiguous
	`else'.
 
Wed Mar 25 02:39:01 1998  Paul Eggert  <eggert@twinsun.com>

	* configure.in (i[[34567]]86-*-solaris2*, powerpcle-*-solaris2*,
	sparc-*-solaris2*): Use fixinc.svr4 if Solaris 2.0 through 2.4.

Mon Mar 23 07:27:19 1998  Philippe De Muyter  <phdm@macqel.be>

	* m68k.md (ashldi_const): Allow shift count in range ]32,63].
	(ashldi3): Allow constant shift count in range ]32,63].
	(ashrdi_const, ashrid3, lshrdi_const, lshrdi3): Likewise.

	* m68k.md (zero_extend[qh]idi2, iordi_zext): New patterns.
	(zero_extendsidi2): Avoid useless copy.
	(iorsi_zexthi_ashl16): Avoid "0" constraint for operand 2.
	(iorsi_zext): New name for old unnamed pattern; indentation fixes.

Mon Mar 23 07:12:05 1998  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* final.c (only_leaf_regs_used): If pic_offset_table_rtx used,
	make sure it is a permitted register.

Sun Mar 22 06:57:04 1998  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* expmed.c (extract_bit_field): Don't confuse SUBREG_WORD with
	endian adjustment in SUBREG case.