@@ -31,6 +31,12 @@ Boston, MA 02111-1307, USA.  */
 #define LIB_SPEC "%{p:-lprof1} %{pg:-lprof1} -lc"
 #endif
 
+#define SUBTARGET_CPP_SPEC "\
+%{.cc:	-D__LANGUAGE_C -D_LANGUAGE_C} \
+%{.cxx:	-D__LANGUAGE_C -D_LANGUAGE_C} \
+%{.C:	-D__LANGUAGE_C -D_LANGUAGE_C} \
+"
+
 #ifndef STARTFILE_SPEC
 #define STARTFILE_SPEC "%{pg:gcrt0.o%s}%{!pg:%{p:mcrt0.o%s}%{!p:crt0.o%s}}"
 #endif
